--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,5 @@
 PORT=4000
 DATABASE_URL="postgresql://user:password@host:port/database?sslmode=require"
 TEST_MODE=0
+FRONTEND_URL=http://localhost:3000
+
