--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
-    "prisma": "^7.2.0"
+    "prisma": "^7.2.0",
+    "typescript": "^5.9.3"
   }
 }
