--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -9,18 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/index.js",
-      "methods": ["GET", "POST", "OPTIONS", "PUT", "DELETE"]
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS, PUT, DELETE" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, x-test-now-ms" }
-      ]
+      "dest": "/dist/index.js"
     }
   ]
 }
